--- a/frontend/componente/pagini/Css/news.css
+++ b/frontend/componente/pagini/Css/news.css
@@ -1,6 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900'); */
 
-body {
+/* body {
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     line-height: 1.7;
@@ -9,7 +9,7 @@ body {
     overflow: hidden;
     height: 100vh;
     background: none;
-}
+} */
 
 .add-button {
     margin-top: 20px;
