--- a/frontend/componente/pagini/Css/news.css
+++ b/frontend/componente/pagini/Css/news.css
@@ -41,9 +41,10 @@
 }
 
 .box {
+    /* width: '100%', height: '100%', position: 'relative', background: '#FAFAF5', borderRadius: 24, overflow: 'hidden', border: '2px #E6E6E6 solid' */
     margin-top: 10px;
-    width: 343px;
-    height: 368px;
+    width: 500px;
+    height: 300px;
     position: relative;
     background: var(--beige2);
     border-radius: 24px;
@@ -51,25 +52,34 @@
     border: 2px var(--beige2) solid;
 }
 
+/* <div style={{width: '100%', height: '100%', position: 'relative', background: '#FAFAF5', borderRadius: 24, overflow: 'hidden', border: '2px #E6E6E6 solid'}}>
+<div style={{left: 406, top: 40, position: 'absolute', color: 'black', fontSize: 20, fontFamily: 'Inter', fontWeight: '600', lineHeight: 26, wordWrap: 'break-word'}}>Dog</div>
+<div style={{left: 339, top: 225, position: 'absolute', color: '#6D6D6D', fontSize: 16, fontFamily: 'Inter', fontWeight: '400', lineHeight: 24, wordWrap: 'break-word'}}>Timisoara</div>
+<img style={{width: 229, height: 211, left: 24, top: 81, position: 'absolute'}} src="https://via.placeholder.com/229x211" />
+<div style={{width: 126, height: 48, left: 339, top: 275, position: 'absolute', background: '#426B1F', borderRadius: 4, overflow: 'hidden'}}>
+<div style={{left: 39, top: 13.50, position: 'absolute', textAlign: 'center', color: 'white', fontSize: 16, fontFamily: 'Inter', fontWeight: '600', lineHeight: 20.80, wordWrap: 'break-word'}}>Adopt</div>
+</div>
+<div style={{left: 339, top: 90, position: 'absolute', color: '#6D6D6D', fontSize: 16, fontFamily: 'Inter', fontWeight: '400', lineHeight: 24, wordWrap: 'break-word'}}>Lalalalalalalalalalalalalalalalalalalalalaalalala</div>
+</div> */
+
 .title {
-    left: 24px;
-    top: 255px;
-    position: absolute;
-    color: black;
+    position: relative;
+    left: 300px;
+    top: 20px;
+    color: var(--brown);
     font-size: 20px;
-    font-weight: 600px;
-    line-height: 26px;
+    font-weight: 600;
     word-wrap: break-word;
 }
 
 .city {
-    left: 24px;
-    top: 293px;
+    left: 300px;
+    top: 200px;
     position: absolute;
     color: var(--brown);
     font-size: 16px;
     font-family: Inter;
-    font-weight: 400px;
+    font-weight: 400;
     line-height: 24px;
     word-wrap: break-word;
 }
@@ -77,16 +87,26 @@
 .image {
     width: 229px;
     height: 211px;
-    left: 57px;
-    top: 16px;
+    left: 24px;
+    top: 20px;
     position: absolute;
 }
 
+.description{
+    left: 300px;
+    top: 90px;
+    position: absolute;
+    color: var(--brown);
+    font-size: 16px;
+    font-weight: 400px;
+    line-height: 24px;
+    word-wrap: break-word;
+}
+
 .button {
-    width: 126px;
-    height: 48px;
-    left: 190px;
-    top: 263px;
+    left: 350px;
+    top: 250px;
+    width: 100px;
     position: absolute;
     background: var(--green);
     border-radius: 4px;
