--- a/frontend/componente/pagini/Css/add-form.css
+++ b/frontend/componente/pagini/Css/add-form.css
@@ -10,6 +10,16 @@
     margin-bottom: 20px;
 }
 
+.desc {
+    width: 460px;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.5;
+    padding: 8px 12px;
+    border-radius: 8px;
+}
+
 .MuiButton-containedPrimary {
     background-color: var(--green);
     color: white;
@@ -29,7 +39,7 @@ h1 {
     display: none;
 }
 
-.label-class{
+.label-class {
     margin-right: 20px;
 }
 
