--- a/frontend/componente/pagini/Css/textTitlu.scss
+++ b/frontend/componente/pagini/Css/textTitlu.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+@import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
 $durata-totala-animatie: 7.7s;
 $duratie: math.div($durata-totala-animatie, 7);
 
